fix: 통합테스트 문제 해결